# tcp_remote_controller

./: .gitignore  CMakeLists.txt  README.md
code/: a.out
code/client/: a.out  client.c
code/server/: server  server.c  webserver.c
code/server/include/: client_handler.h  command_queue.h  device_worker.h  file_transfer.h
code/server/sensors/: a.out  buzzer.c  camera.c  cds.c  fnd.c  led.c  sensors.h
code/server/src/: client_handler.c  command_queue.c  device_worker.c  file_transfer.c  main.c  server.c
docs/: README.md  running.txt  server.txt
exec/: client  server
exec/client/: client
exec/server/: server
